--- a/analysis/high_level_analysis.ipynb
+++ b/analysis/high_level_analysis.ipynb
@@ -24,37 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pandas==2.2.3 (from -r requirements.txt (line 1))\n",
-      "  Using cached pandas-2.2.3-cp312-cp312-macosx_11_0_arm64.whl.metadata (89 kB)\n",
-      "Collecting numpy>=1.26.0 (from pandas==2.2.3->-r requirements.txt (line 1))\n",
-      "  Downloading numpy-2.2.6-cp312-cp312-macosx_14_0_arm64.whl.metadata (62 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from pandas==2.2.3->-r requirements.txt (line 1)) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas==2.2.3->-r requirements.txt (line 1))\n",
-      "  Downloading pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas==2.2.3->-r requirements.txt (line 1))\n",
-      "  Downloading tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas==2.2.3->-r requirements.txt (line 1)) (1.17.0)\n",
-      "Using cached pandas-2.2.3-cp312-cp312-macosx_11_0_arm64.whl (11.4 MB)\n",
-      "Downloading numpy-2.2.6-cp312-cp312-macosx_14_0_arm64.whl (5.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m61.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
-      "Downloading tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
-      "Installing collected packages: pytz, tzdata, numpy, pandas\n",
-      "Successfully installed numpy-2.2.6 pandas-2.2.3 pytz-2025.2 tzdata-2025.2\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -r requirements.txt"
    ]
@@ -70,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,18 +96,28 @@
     "    # Pearson correlation between years of Python experience and general experience\n",
     "    \"Correlation (Python vs general years)\": completed[[\"Q2.2\", \"Q2.3\"]].corr().iloc[0, 1],\n",
     "    \"Average estimated correct answers\": completed[\"Q11.1\"].mean(),\n",
-    "}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: Generate the Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display\n",
     "\n",
     "# 4. Present results in a tidy table\n",
     "summary_df = pd.DataFrame(list(metrics.items()), columns=[\"Metric\", \"Value\"])\n",
     "\n",
-    "try:\n",
-    "    # If available, show an interactive table\n",
-    "    from ace_tools import display_dataframe_to_user\n",
-    "    display_dataframe_to_user(\"Survey summary metrics\", summary_df)\n",
-    "except ImportError:\n",
-    "    # Fallback to a simple printout\n",
-    "    print(summary_df.to_string(index=False))"
+    "display(summary_df.style.set_caption(\"Survey Summary Metrics\").format(precision=2))"
    ]
   }
  ],
