Update markdown block in the high-level analysis

--- a/analysis/high_level_analysis.ipynb
+++ b/analysis/high_level_analysis.ipynb
@@ -17,8 +17,13 @@
     "- **Average Python YoE**: The average number of years of experience participants have with Python.\n",
     "- **Average Programming YoE**: The average number of years of experience participants have with programming in general.\n",
     "- **Average Self-reported score**: The average self-reported score of correctly answered questions (out of 16 questions).\n",
-    "- **Correlation between self-reported score and Python YoE**: The correlation coefficient between the self-reported correct answers score and the number of years of experience with Python.\n",
-    "- **Correlation between self-reported score and Programming YoE**: The correlation coefficient between the self-reported correct answers score and the number of years of experience with programming in general."
+    "- **Correlation between Python YoE and Programming YoE**: The Pearson correlation coefficient between the number of years of experience with Python and the number of years of experience with programming in general.\n",
+    "- **Correlation between self-reported score and Python YoE**: The Spearman correlation coefficient between the self-reported correct answers score and the number of years of experience with Python.\n",
+    "- **Correlation between self-reported score and Programming YoE**: The Spearman correlation coefficient between the self-reported correct answers score and the number of years of experience with programming in general.\n",
+    "\n",
+    "> Notes: \n",
+    "> - Since Python YoE and Programming YoE are essentially continuous variables, the correlation coefficients are calculated using the Pearson method.\n",
+    "> - The self-reported number of correctly answered questions is a discrete variable (0 - 16), so the Spearman method is used for correlation calculations."
    ]
   },
   {
