--- a/analysis/high_level_analysis.ipynb
+++ b/analysis/high_level_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# High-Level Results Analysis for Qualtrics Python Skill Level Survey\n",
+    "# EXCEED Python Qualtrics Survey - High-Level Analysis\n",
     "\n",
     "This document provides a high-level analysis of the results from the Qualtrics Python Skill Level Survey. The goal of the survey was to objectively assess the Python skill levels of participants, by placing them into one of the 2 categories: _Beginner_/_Novices_ and _Advanced_/_Experts_. \n",
     "\n",
@@ -149,88 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_d2353\">\n",
-       "  <caption>Qualtrics Python Skill Level Assessment - High-level Metrics</caption>\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_d2353_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
-       "      <th id=\"T_d2353_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_d2353_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
-       "      <td id=\"T_d2353_row0_col1\" class=\"data row0 col1\" >70.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_d2353_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
-       "      <td id=\"T_d2353_row1_col1\" class=\"data row1 col1\" >57.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_d2353_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
-       "      <td id=\"T_d2353_row2_col1\" class=\"data row2 col1\" >81.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_d2353_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
-       "      <td id=\"T_d2353_row3_col1\" class=\"data row3 col1\" >27860.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_d2353_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
-       "      <td id=\"T_d2353_row4_col1\" class=\"data row4 col1\" >1007.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_d2353_row5_col0\" class=\"data row5 col0\" >Average Python experience (years)</td>\n",
-       "      <td id=\"T_d2353_row5_col1\" class=\"data row5 col1\" >5.51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_d2353_row6_col0\" class=\"data row6 col0\" >Average general experience (years)</td>\n",
-       "      <td id=\"T_d2353_row6_col1\" class=\"data row6 col1\" >12.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_d2353_row7_col0\" class=\"data row7 col0\" >Average estimated correct answers</td>\n",
-       "      <td id=\"T_d2353_row7_col1\" class=\"data row7 col1\" >12.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_d2353_row8_col0\" class=\"data row8 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
-       "      <td id=\"T_d2353_row8_col1\" class=\"data row8 col1\" >0.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_d2353_row9_col0\" class=\"data row9 col0\" >Spearman Correlation (Python YoE and self-reported score)</td>\n",
-       "      <td id=\"T_d2353_row9_col1\" class=\"data row9 col1\" >0.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d2353_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "      <td id=\"T_d2353_row10_col0\" class=\"data row10 col0\" >Spearman Correlation (General programming YoE and self-reported score)</td>\n",
-       "      <td id=\"T_d2353_row10_col1\" class=\"data row10 col1\" >0.02</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1127e5910>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mIPython\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdisplay\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m display\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# 4. Present results in a tidy table\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m summary_df = \u001b[43mpd\u001b[49m.DataFrame(\u001b[38;5;28mlist\u001b[39m(metrics.items()), columns=[\u001b[33m\"\u001b[39m\u001b[33mMetric\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mValue\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m      6\u001b[39m display(summary_df.style.set_caption(\u001b[33m\"\u001b[39m\u001b[33mQualtrics Python Skill Level Assessment - High-level Metrics\u001b[39m\u001b[33m\"\u001b[39m).format(precision=\u001b[32m2\u001b[39m))\n",
+      "\u001b[31mNameError\u001b[39m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -241,11 +172,18 @@
     "\n",
     "display(summary_df.style.set_caption(\"Qualtrics Python Skill Level Assessment - High-level Metrics\").format(precision=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -259,9 +197,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
