Update high_level_analysis.ipynb and create detailed_analysis.ipynb (WIP)

--- a/analysis/detailed_analysis.ipynb
+++ b/analysis/detailed_analysis.ipynb
@@ -16,11 +16,13 @@
     "    3. **General Programming YoE**: Participants indicate their years of experience with programming in general.\n",
     "3. **General Programming Error Understanding**: 7 questions\n",
     "4. **Python-Specific General Error Understanding**: 7 questions\n",
-    "5. **Error Resolution**: 7 questions\n",
+    "5. **Code Reading / Understanding**: 7 questions\n",
     "6. **Error Message Comprehension**: 7 questions\n",
-    "7. **Natural Language Scenarios**: 7 questions\n",
-    "8. **Miscellanous Questions - Various Complexity & Scope**: 7 questions\n",
-    "9. **Self-Assessment of Results**: Participants self-assess the number of questions they answered correctly in the survey (0 to 16)."
+    "7. **Error Resolution**: 7 questions\n",
+    "8. **Error Message Comprehension**: 7 questions\n",
+    "9. **Natural Language Scenarios**: 7 questions\n",
+    "10. **Miscellanous Questions - Various Complexity & Scope**: 7 questions\n",
+    "11. **Self-Assessment of Results**: Participants self-assess the number of questions they answered correctly in the survey (0 to 16)."
    ]
   },
   {
