--- a/analysis/detailed_analysis.ipynb
+++ b/analysis/detailed_analysis.ipynb
@@ -26,12 +26,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 0: Install Required Libraries\n",
+    "\n",
+    "Prior to running the analysis, ensure that the required libraries are installed. For this, you need only install the libraries defined in the `requirements.txt` file. You can do this by running the following command in your terminal:\n",
+    "\n",
+    "```bash\n",
+    "pip install -r requirements.txt\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Load the data\n",
+    "\n",
+    "For this step, we need to load 2 CSV files:\n",
+    "1. `survey_results.csv`: Contains the survey responses and some other metadata\n",
+    "2. `survey_answers.csv`: Contains the correct answers for the survey questions\n",
+    "\n",
+    "The default files are in the same directory as this notebook. If you have the files in a different directory, please change the file paths accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "file_path_survey_results = \"./survey_results.csv\"\n",
+    "file_path_survey_answers = \"./survey_answers.csv\"\n",
+    "\n",
+    "# Step 0. Load data (files are semicolon‑delimited)\n",
+    "df_results = pd.read_csv(file_path_survey_results, sep=';')\n",
+    "df_answers = pd.read_csv(file_path_survey_answers, sep=';')"
    ]
   }
  ],
