--- a/analysis/high_level_analysis.ipynb
+++ b/analysis/high_level_analysis.ipynb
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Set the path to the Qualtrics CSV file (adjust as needed, but default is in the same directory)\n",
-    "file_path = \"./qualtrics_responses_labels_simplified.csv\"\n",
+    "file_path = \"./survey_results.csv\"\n",
     "\n",
     "# 1. Load data (Qualtrics exports are semicolon‑delimited by default)\n",
     "df = pd.read_csv(file_path, sep=';')"
