Add visualization notebook

--- a/notebooks/01_detailed_analysis.ipynb
+++ b/notebooks/01_detailed_analysis.ipynb
@@ -94,9 +94,7 @@
     "\n",
     "For this step, we need to load 2 CSV files:\n",
     "1. `survey_results.csv`: Contains the survey responses and some other metadata\n",
-    "2. `survey_answers.csv`: Contains the correct answers for the survey questions\n",
-    "\n",
-    "The default files are in the same directory as this notebook. If you have the files in a different directory, please change the file paths accordingly."
+    "2. `survey_answers.csv`: Contains the correct answers for the survey questions"
    ]
   },
   {
