--- a/notebooks/01_detailed_analysis.ipynb
+++ b/notebooks/01_detailed_analysis.ipynb
@@ -935,7 +935,7 @@
     "The discrimination index (r_pb) is calculated using the point-biserial correlation coefficient, which measures the relationship between a binary variable (correct/incorrect) and a continuous variable (total score excluding the item itself). The following ranges for r_pb are as follows:\n",
     "- **0.00 - 0.19/0.2**: Weak discriminator / Should be replaced\n",
     "- **0.20 - 0.29**: Acceptable discriminator\n",
-    "- **>= 0.30**: Strong discriminator## Step 7: Get Top 2 Questions per Block"
+    "- **>= 0.30**: Strong discriminator"
    ]
   },
   {
