Update results.csv file

--- a/notebooks/00_high_level_analysis.ipynb
+++ b/notebooks/00_high_level_analysis.ipynb
@@ -30,8 +30,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-25T21:30:38.498298Z",
-     "start_time": "2025-05-25T21:30:38.306258Z"
+     "end_time": "2025-06-02T20:42:40.758955Z",
+     "start_time": "2025-06-02T20:42:40.754972Z"
     }
    },
    "source": [
@@ -44,7 +44,7 @@
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -63,8 +63,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-25T21:30:38.965864Z",
-     "start_time": "2025-05-25T21:30:38.544283Z"
+     "end_time": "2025-06-02T20:42:41.178686Z",
+     "start_time": "2025-06-02T20:42:40.770365Z"
     }
    },
    "source": [
@@ -80,6 +80,7 @@
       "Requirement already satisfied: Jinja2==3.1.6 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from -r requirements.txt (line 3)) (3.1.6)\r\n",
       "Requirement already satisfied: numpy==2.2.6 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from -r requirements.txt (line 4)) (2.2.6)\r\n",
       "Requirement already satisfied: scipy==1.15.3 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from -r requirements.txt (line 5)) (1.15.3)\r\n",
+      "Requirement already satisfied: matplotlib==3.10.3 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from -r requirements.txt (line 6)) (3.10.3)\r\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from pandas==2.2.3->-r requirements.txt (line 1)) (2.9.0.post0)\r\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from pandas==2.2.3->-r requirements.txt (line 1)) (2025.2)\r\n",
       "Requirement already satisfied: tzdata>=2022.7 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from pandas==2.2.3->-r requirements.txt (line 1)) (2025.2)\r\n",
@@ -93,6 +94,13 @@
       "Requirement already satisfied: stack_data in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from ipython==9.2.0->-r requirements.txt (line 2)) (0.6.3)\r\n",
       "Requirement already satisfied: traitlets>=5.13.0 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from ipython==9.2.0->-r requirements.txt (line 2)) (5.14.3)\r\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from Jinja2==3.1.6->-r requirements.txt (line 3)) (3.0.2)\r\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from matplotlib==3.10.3->-r requirements.txt (line 6)) (1.3.2)\r\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from matplotlib==3.10.3->-r requirements.txt (line 6)) (0.12.1)\r\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from matplotlib==3.10.3->-r requirements.txt (line 6)) (4.58.0)\r\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from matplotlib==3.10.3->-r requirements.txt (line 6)) (1.4.8)\r\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from matplotlib==3.10.3->-r requirements.txt (line 6)) (25.0)\r\n",
+      "Requirement already satisfied: pillow>=8 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from matplotlib==3.10.3->-r requirements.txt (line 6)) (11.2.1)\r\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from matplotlib==3.10.3->-r requirements.txt (line 6)) (3.2.3)\r\n",
       "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from jedi>=0.16->ipython==9.2.0->-r requirements.txt (line 2)) (0.8.4)\r\n",
       "Requirement already satisfied: ptyprocess>=0.5 in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from pexpect>4.3->ipython==9.2.0->-r requirements.txt (line 2)) (0.7.0)\r\n",
       "Requirement already satisfied: wcwidth in /Users/amoraru/Documents/GitHub/EXCEED/exceed-python-skill-assessment/.venv/lib/python3.12/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython==9.2.0->-r requirements.txt (line 2)) (0.2.13)\r\n",
@@ -107,7 +115,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -122,8 +130,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-25T21:30:38.979346Z",
-     "start_time": "2025-05-25T21:30:38.975117Z"
+     "end_time": "2025-06-02T20:42:41.193331Z",
+     "start_time": "2025-06-02T20:42:41.189415Z"
     }
    },
    "source": [
@@ -136,7 +144,7 @@
     "df = pd.read_csv(file_path, sep=';')"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -151,8 +159,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-25T21:30:38.988086Z",
-     "start_time": "2025-05-25T21:30:38.986100Z"
+     "end_time": "2025-06-02T20:42:41.204346Z",
+     "start_time": "2025-06-02T20:42:41.202385Z"
     }
    },
    "source": [
@@ -160,7 +168,7 @@
     "completed = df[df[\"Finished\"] == 1]"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -175,8 +183,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-25T21:30:39.001052Z",
-     "start_time": "2025-05-25T21:30:38.996195Z"
+     "end_time": "2025-06-02T20:42:41.216598Z",
+     "start_time": "2025-06-02T20:42:41.212342Z"
     }
    },
    "source": [
@@ -197,7 +205,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -212,8 +220,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-25T21:30:39.038865Z",
-     "start_time": "2025-05-25T21:30:39.009452Z"
+     "end_time": "2025-06-02T20:42:41.455658Z",
+     "start_time": "2025-06-02T20:42:41.225046Z"
     }
    },
    "source": [
@@ -228,75 +236,75 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x10c67dc10>"
+       "<pandas.io.formats.style.Styler at 0x10aa3ab70>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_efa48\">\n",
+       "<table id=\"T_ef1c2\">\n",
        "  <caption>Qualtrics Python Skill Level Assessment - High-level Metrics</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_efa48_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
-       "      <th id=\"T_efa48_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
+       "      <th id=\"T_ef1c2_level0_col0\" class=\"col_heading level0 col0\" >Metric</th>\n",
+       "      <th id=\"T_ef1c2_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_efa48_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
-       "      <td id=\"T_efa48_row0_col1\" class=\"data row0 col1\" >70.00</td>\n",
+       "      <th id=\"T_ef1c2_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_ef1c2_row0_col0\" class=\"data row0 col0\" >Total number of responses</td>\n",
+       "      <td id=\"T_ef1c2_row0_col1\" class=\"data row0 col1\" >78.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_efa48_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
-       "      <td id=\"T_efa48_row1_col1\" class=\"data row1 col1\" >57.00</td>\n",
+       "      <th id=\"T_ef1c2_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_ef1c2_row1_col0\" class=\"data row1 col0\" >Total number of completed responses</td>\n",
+       "      <td id=\"T_ef1c2_row1_col1\" class=\"data row1 col1\" >60.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_efa48_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
-       "      <td id=\"T_efa48_row2_col1\" class=\"data row2 col1\" >81.43</td>\n",
+       "      <th id=\"T_ef1c2_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_ef1c2_row2_col0\" class=\"data row2 col0\" >Completion rate (%)</td>\n",
+       "      <td id=\"T_ef1c2_row2_col1\" class=\"data row2 col1\" >76.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_efa48_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
-       "      <td id=\"T_efa48_row3_col1\" class=\"data row3 col1\" >27860.26</td>\n",
+       "      <th id=\"T_ef1c2_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_ef1c2_row3_col0\" class=\"data row3 col0\" >Average duration (sec)</td>\n",
+       "      <td id=\"T_ef1c2_row3_col1\" class=\"data row3 col1\" >26528.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_efa48_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
-       "      <td id=\"T_efa48_row4_col1\" class=\"data row4 col1\" >1007.00</td>\n",
+       "      <th id=\"T_ef1c2_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_ef1c2_row4_col0\" class=\"data row4 col0\" >Median duration (sec)</td>\n",
+       "      <td id=\"T_ef1c2_row4_col1\" class=\"data row4 col1\" >986.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_efa48_row5_col0\" class=\"data row5 col0\" >Average Python experience (years)</td>\n",
-       "      <td id=\"T_efa48_row5_col1\" class=\"data row5 col1\" >5.51</td>\n",
+       "      <th id=\"T_ef1c2_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_ef1c2_row5_col0\" class=\"data row5 col0\" >Average Python experience (years)</td>\n",
+       "      <td id=\"T_ef1c2_row5_col1\" class=\"data row5 col1\" >5.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_efa48_row6_col0\" class=\"data row6 col0\" >Average general experience (years)</td>\n",
-       "      <td id=\"T_efa48_row6_col1\" class=\"data row6 col1\" >12.09</td>\n",
+       "      <th id=\"T_ef1c2_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_ef1c2_row6_col0\" class=\"data row6 col0\" >Average general experience (years)</td>\n",
+       "      <td id=\"T_ef1c2_row6_col1\" class=\"data row6 col1\" >12.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_efa48_row7_col0\" class=\"data row7 col0\" >Average estimated correct answers</td>\n",
-       "      <td id=\"T_efa48_row7_col1\" class=\"data row7 col1\" >12.16</td>\n",
+       "      <th id=\"T_ef1c2_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_ef1c2_row7_col0\" class=\"data row7 col0\" >Average estimated correct answers</td>\n",
+       "      <td id=\"T_ef1c2_row7_col1\" class=\"data row7 col1\" >12.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_efa48_row8_col0\" class=\"data row8 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
-       "      <td id=\"T_efa48_row8_col1\" class=\"data row8 col1\" >0.55</td>\n",
+       "      <th id=\"T_ef1c2_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_ef1c2_row8_col0\" class=\"data row8 col0\" >Pearson Correlation (Python YoE and General programming YoE)</td>\n",
+       "      <td id=\"T_ef1c2_row8_col1\" class=\"data row8 col1\" >0.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_efa48_row9_col0\" class=\"data row9 col0\" >Spearman Correlation (Python YoE and self-reported score)</td>\n",
-       "      <td id=\"T_efa48_row9_col1\" class=\"data row9 col1\" >0.26</td>\n",
+       "      <th id=\"T_ef1c2_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_ef1c2_row9_col0\" class=\"data row9 col0\" >Spearman Correlation (Python YoE and self-reported score)</td>\n",
+       "      <td id=\"T_ef1c2_row9_col1\" class=\"data row9 col1\" >0.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_efa48_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "      <td id=\"T_efa48_row10_col0\" class=\"data row10 col0\" >Spearman Correlation (General programming YoE and self-reported score)</td>\n",
-       "      <td id=\"T_efa48_row10_col1\" class=\"data row10 col1\" >0.02</td>\n",
+       "      <th id=\"T_ef1c2_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+       "      <td id=\"T_ef1c2_row10_col0\" class=\"data row10 col0\" >Spearman Correlation (General programming YoE and self-reported score)</td>\n",
+       "      <td id=\"T_ef1c2_row10_col1\" class=\"data row10 col1\" >0.03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -306,14 +314,14 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 15
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-25T21:30:39.049347Z",
-     "start_time": "2025-05-25T21:30:39.048145Z"
+     "end_time": "2025-06-02T20:42:41.466204Z",
+     "start_time": "2025-06-02T20:42:41.465062Z"
     }
    },
    "source": [],
